I removed an unnecessary file and corrected a small error by changing the p tag wrapping the tipbox content to a div.

--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -585,10 +585,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.5rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .mr-1 {
   margin-right: 0.25rem;
 }
@@ -599,6 +595,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-0\.5 {
@@ -937,14 +937,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-0\.5 {
-  padding: 0.125rem;
-}
-
-.p-0 {
-  padding: 0px;
 }
 
 .p-3 {
